# niu-code

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  RELEASE_CHECKLIST.md  architecture.md  development-plan.md  types-example.ts
.claude/agents/: vue3-frontend-engineer.md
.claude/commands/: git-commit-msg.md
.github/workflows/: release.yml
backend/: .env.example  Cargo.toml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
backend-rust/: Cargo.toml
backend-rust/cc-sdk/: Cargo.toml  test-output.txt
backend-rust/cc-sdk/examples/: can_use_tool.rs  oneshot.rs  stream.rs
backend-rust/cc-sdk/src/: cli.rs  lib.rs
backend-rust/cc-sdk/src/types/: can_use_tool.rs  message.rs  options.rs  tool_input.rs
backend-rust/server/: Cargo.toml
backend-rust/server/src/: chat.rs  claude.rs  lib.rs  message.rs
backend-rust/src/: main.rs
backend/cc-sdk/examples/: can_use_tool.rs  oneshot.rs  stream.rs
backend/cc-sdk/src/: cli.rs  types.rs
backend/cc-sdk/src/types/: anthropic.rs  can_use_tool.rs  message.rs  options.rs  tool_input.rs
backend/server/: Cargo.toml
backend/server/src/: chat.rs  claude.rs  claude_log.rs  lib.rs  message.rs  prompt_hub.rs  result.rs  resume.rs  setting.rs  websocket.rs  work_dir.rs
backend/src/: api.rs  app.ts  embedded.rs  main.rs
backend/src/api/: chat.rs  fs.rs  prompt.rs  setting.rs
backend/src/services/: claude.ts  websocket.ts
backend/src/types/: claude.ts  index.ts  session.ts  websocket.ts  ws-message.ts
backend/src/utils/: uuid.ts
docs/: DEV.md  service-management.md
frontend/: CLAUDE.md  components.d.ts  eslint.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  usePrimeVue.ts
frontend/src/assets/: opcode_expanded.json  tiptap.css
frontend/src/components/: AppHeader.vue  ChatLayout.vue  ChatMessage.vue  DirectoryPicker.vue  ExitPlanModeOptions.vue  GlobalPermissionDialog.vue  HistorySessionModal.vue  MessageInput.vue  MessageList.vue  PermissionOptions.vue  SessionListModal.vue  ToolPermissionDialog.vue  WelcomeScreen.vue
frontend/src/composables/: useChatSession.ts  useConnection.ts  useFileWatch.ts  useHistoryResume.ts  useLayout.ts  useMessageEditor.ts  useMessageHandler.ts  useMessageProcessing.ts  useMessageSender.ts  usePermissionDialog.ts  useResume.ts  useSessionResume.ts  useSessionSwitch.ts  useToolUseHandler.ts  useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  errorHandler.ts  fileSystemService.ts  fileUpdates.ts  historyReplay.ts  index.ts  messageManager.ts  mock-loader.ts  promptHistory.ts  recentProjects.ts  websocket.ts
frontend/src/stores/: chat.ts  chatManager.ts  claudeInfo.ts  renderableMessages.ts  theme.ts  toast.ts  toolCache.ts  workspace.ts
frontend/src/styles/: theme.css  variables.css
frontend/src/types/: chat.ts  claude.ts  claude_log.ts  error.ts  history_log.ts  index.ts  message.ts  prompt.ts  sdk-tools.d.ts  session.ts  tool_use.ts  websocket.ts  ws-message.ts
frontend/src/utils/: chatExporter.ts  contentConverter.ts  markdownRenderer.ts  messageExtractors.ts  mockLoader.ts  notification.ts  pathProcess.ts  renderer-manager.ts  sound.ts
scripts/: build.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
scripts/launchd/: com.niu-code.plist
scripts/systemd/: niu-code.service
(+68 files in other folders)
