[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["cc-sdk", "server"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"
derive_more = { version = "2.0.1", features = ["from", "display"] }

[dependencies]
actix-web = "4.11.0"
anyhow.workspace = true
derive_more = "2.0.1"
server = { version = "0.1.0", path = "server" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.20"
