[package]
name = "cc-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
claude-code-sdk = "0.0.3"
nanoid = "0.4.0"
pin-project = "1.1.10"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"
which = "8.0.0"

[dev-dependencies]
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
