[package]
name = "cc-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true

nanoid = "0.4.0"
pin-project = "1.1.10"
which = "8.0.0"

[dev-dependencies]
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
