[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
anyhow.workspace = true
async-trait.workspace = true
cc-sdk = { version = "0.1.0", path = "../cc-sdk" }
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
walkdir = "2.5.0"
