[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
anyhow.workspace = true
arc-swap = "1.7.1"
async-trait.workspace = true
cc-sdk = { version = "0.1.0", path = "../cc-sdk" }
chrono = { version = "0.4", features = ["serde"] }
derive_more.workspace = true
dirs = "6.0.0"
ignore = "0.4"
notify = "8.2.0"
regex = "1.11.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
walkdir = "2.5.0"

[dev-dependencies]
